1.fixed style for combo tbar items 2.if combo has both `jump` and `make` - they'll be shown only if each is enabled 3.added ability to configure listeners for tbar items, so they won't override listeners,   defined in tbar.defaults.listeners

--- a/css/admin/indi.layout.css
+++ b/css/admin/indi.layout.css
@@ -860,3 +860,6 @@ td.i-overflow:hover .x-grid-cell-inner, td.i-overflow:hover .x-grid-cell-inner *
 .x-grid-inner-locked + .x-grid .x-grid-group-hd .x-grid-cell-inner .x-grid-group-title {
     visibility: hidden;
 }
+.x-field-label-cell .x-toolbar .x-btn-inner {
+    padding: 0 1px;
+}
